--- a/yepcette/assets/styles/sass/_header.scss
+++ b/yepcette/assets/styles/sass/_header.scss
@@ -4,12 +4,12 @@ body > header{
     grid-template-columns: 0.1fr 0.1fr 0.1fr 0.8fr 0.4fr 0.2fr 0.1fr;
     grid-template-rows: 10vh;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    > figure{
+    > h1{
+        align-self: center;
+        justify-self: center;
         grid-column: 2 / 3;
-        height: 100%;
-        > img{
-            height: 100%;
-        }
+        font-size: 2rem;
+        font-weight: bold;
     }
     > nav{
         grid-column: 4 / 5;
