--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -1,140 +1,18 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
+/* Error: expected "{".
+ *   ,
+ * 5 | @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
+ *   |                                                                                                        ^
+ *   '
+ *   assets/styles/sass/_vars.scss 5:104  @import
+ *   assets/styles/sass/style.scss 2:9    root stylesheet */
 
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
   display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: expected \"{\".\a   \2577 \a 5 \2502  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');\a   \2502                                                                                                         ^\a   \2575 \a   assets/styles/sass/_vars.scss 5:104  @import\a   assets/styles/sass/style.scss 2:9    root stylesheet";
 }
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body > header {
-  background-color: rgba(0, 0, 0, 0.1);
-  display: grid;
-  grid-template-columns: 0.1fr 0.1fr 0.1fr 0.8fr 0.4fr 0.2fr 0.1fr;
-  grid-template-rows: 10vh;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-}
-body > header > h1 {
-  align-self: center;
-  justify-self: center;
-  grid-column: 2/3;
-  font-size: 2rem;
-  font-weight: bold;
-}
-body > header > nav {
-  grid-column: 4/5;
-  display: flex;
-}
-body > header > nav > ul {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-body > header > nav > ul > li {
-  padding: 5px 0;
-}
-body > header > nav > ul > li > a {
-  font-size: 1.4rem;
-  text-decoration: none;
-}
-@media (prefers-color-scheme: light) {
-  body > header > nav > ul > li > a {
-    color: #242523;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  body > header > nav > ul > li > a {
-    color: #ffffff;
-  }
-}
-body > header > nav > ul > li:hover {
-  transform: translateY(-4px);
-}
-@media (prefers-color-scheme: light) {
-  body > header > nav > ul > li:hover {
-    border-bottom: 4px solid #242523;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  body > header > nav > ul > li:hover {
-    border-bottom: 4px solid #ffffff;
-  }
-}
-body > header > ul {
-  grid-column: 6/7;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-body > header > ul > li > a {
-  font-size: 1.4rem;
-  text-decoration: none;
-}
-@media (prefers-color-scheme: light) {
-  body > header > ul > li > a {
-    color: #242523;
-  }
-}
-@media (prefers-color-scheme: dark) {
-  body > header > ul > li > a {
-    color: #ffffff;
-  }
-}
-body > header > ul > li:hover {
-  transform: translateY(-4px);
-}
-body > header > ul > li:hover > a {
-  color: grey;
-}
-
-.hidden {
-  display: none;
-}
-
-/*# sourceMappingURL=style.css.map */
