--- a/yepcette/assets/styles/sass/_vars.scss
+++ b/yepcette/assets/styles/sass/_vars.scss
@@ -1,18 +1,15 @@
-// Themes
-$white : #ffffff;
-$black : #242523;
+<style>
 
-// Light
-$lightThemeRed : #ba0534;
-$lightThemeBlue : #2d71e3;
-$lightThemeGreen : #106942;
-$lightThemeOrange : #d73b07;
 
-// Dark
-$darkThemeRed : #fe4c54;
-$darkThemeBlue : #1499e7;
-$darkThemeGreen: #3ee8a5;
-$darkThemeOrange : #fd790f;
+/***** Work pour titre *****/
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
 
-// Gradient
-$gradient-top-left: linear-gradient(225deg, #7400b8, #6930c3, #5e60ce, #5390d9, #4ea8de, #48bfe3, #56cfe1);
+
+/***** open pour texte *****/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+
+
+/***** Corinthia pour logo *****/
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
+
+</style>
