Sauvegarde de Vincent 11h54

--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -1,10 +1,9 @@
 @import "reset.scss";
 @import "vars.scss";
 @import "header.scss";
+@import "home.scss";
 
 .hidden{
     display: none;
 }
 
-
-Hello
