--- a/yepcette/assets/styles/sass/_header.scss
+++ b/yepcette/assets/styles/sass/_header.scss
@@ -10,6 +10,7 @@ body > header{
         grid-column: 2 / 3;
         font-size: 2rem;
         font-weight: bold;
+        font-family: work;
     }
     > nav{
         grid-column: 4 / 5;
