--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -1,10 +1,12 @@
 @import "reset.scss";
 @import "vars.scss";
 @import "header.scss";
-
+/***** Work pour titre *****/
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
+/***** open pour texte *****/
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+/***** Corinthia pour logo *****/
+@import url('https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700&display=swap');
 .hidden{
     display: none;
 }
-
-
-Hello
