--- a/yepcette/assets/styles/sass/_header.scss
+++ b/yepcette/assets/styles/sass/_header.scss
@@ -17,6 +17,7 @@ body > header{
     > nav{
         grid-column: 4 / 5;
         display: flex;
+        font-family: 'Work Sans', sans-serif;
         > ul{
             width: 100%;
             display: flex;
