--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -2,6 +2,7 @@
 @import "vars.scss";
 @import "header.scss";
 @import "home.scss";
+@import "footer.scss";
 /***** Work pour titre font-family: 'Work Sans', sans-serif; *****/
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;500;600;700&display=swap');
 /***** open pour texte  font-family: 'Open Sans', sans-serif; *****/
