--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -147,39 +147,44 @@ body > header > ul > li:hover > a {
   background-image: url("https://cdn.shopify.com/s/files/1/0566/8526/5032/files/4_3d6903d4-c9f9-4a3b-8f6c-00e884e04bbf.png?v=1656921267");
   background-size: cover;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.2fr;
   justify-content: center;
   align-items: center;
 }
-#home > section:nth-of-type(1) > h1 {
+#home > section:nth-of-type(1) > section > h1 {
   grid-column: 2/3;
   font-size: 5rem;
   font-weight: bold;
   color: #ffffff;
 }
-#home > section:nth-of-type(1) > p {
+#home > section:nth-of-type(1) > section > p {
   grid-column: 2/3;
   font-size: 3rem;
   font-weight: bold;
   color: #ffffff;
+  width: 60vh;
 }
 #home > section:nth-of-type(2) {
   background-color: gainsboro;
-  width: 80%;
-  margin: auto;
   display: grid;
   grid-template-rows: 0.1fr 1fr;
 }
+#home > section:nth-of-type(2) > h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: #242523;
+  margin: 50px;
+  text-align: center;
+}
 #home > section:nth-of-type(2) > ul {
+  width: 80%;
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
 }
 
 .article {
-  width: 20vw;
-  display: grid;
-  grid-template-rows: 1fr 0.8fr 0.2fr;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   padding: 10px;
@@ -202,6 +207,34 @@ body > header > ul > li:hover > a {
 .article > footer {
   display: flex;
   justify-content: center;
+}
+
+.btn-blue {
+  display: inline-block;
+  cursor: pointer;
+  border-radius: 20px;
+  border: none;
+  text-decoration: none;
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 10px 20px;
+  margin: 20px;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+}
+@media (prefers-color-scheme: light) {
+  .btn-blue {
+    background-color: #2d71e3;
+  }
+}
+@media (prefers-color-scheme: dark) {
+  .btn-blue {
+    background-color: #1499e7;
+  }
+}
+.btn-blue:hover {
+  transform: translateY(-2px);
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 a, abbr, acronym, address, applet, big, blockquote, body, caption, cite, code, dd, del, dfn, div, dl, dt, fieldset, font, form, h1, h2, h3, h4, h5, h6, html, iframe, img, ins, kbd, label, legend, li, object, ol, p, pre, q, s, samp, small, span, strike, strong, sub, sup, table, tbody, td, tfoot, th, thead, tr, tt, ul, var {
