--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -4,30 +4,39 @@
         background-image: url("https://cdn.shopify.com/s/files/1/0566/8526/5032/files/4_3d6903d4-c9f9-4a3b-8f6c-00e884e04bbf.png?v=1656921267");
         background-size: cover;
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1.2fr;
         justify-content: center;
         align-items: center;
-        > h1{
-            grid-column: 2 / 3;
-            font-size: 5rem;
-            font-weight: bold;
-            color: $white;
-        }
-        > p{
-                        grid-column: 2 / 3;
-
-            font-size: 3rem;
-            font-weight: bold;
-            color: $white;
+        > section{
+            > h1{
+                grid-column: 2 / 3;
+                font-size: 5rem;
+                font-weight: bold;
+                color: $white;
+            }
+            > p{
+                grid-column: 2 / 3;
+                font-size: 3rem;
+                font-weight: bold;
+                color: $white;
+                width: 60vh;
+            }
         }
     }
     > section:nth-of-type(2){
         background-color: gainsboro;
-        width: 80%;
-        margin: auto;
         display: grid;
         grid-template-rows: 0.1fr 1fr;
+        > h2{
+            font-size: 3rem;
+            font-weight: bold;
+            color: $black;
+            margin: 50px;
+            text-align: center;
+        }
         > ul{
+            width: 80%;
+            margin: auto;
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
             grid-gap: 20px;
@@ -38,9 +47,9 @@
 
 
 .article{
-    width: 20vw;
-    display: grid;
-    grid-template-rows: 1fr 0.8fr 0.2fr;
+    // width: 20vw;
+    // display: grid;
+    // grid-template-rows: 1fr 1fr 0.4fr;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
     border-radius: 20px;
     padding: 10px;
@@ -66,5 +75,29 @@
     > footer{
         display: flex;
         justify-content: center;
+    }
+}
+
+.btn-blue{
+    display: inline-block;
+    cursor: pointer;
+    border-radius: 20px;
+    border: none;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 1.2rem;
+    padding: 10px 20px;
+    margin: 20px;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    @media (prefers-color-scheme: light){
+      background-color: $lightThemeBlue;
+    }
+    @media (prefers-color-scheme: dark){
+      background-color: $darkThemeBlue;
+    }
+    &:hover{
+        transform: translateY(-2px);
+        box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
     }
 }
