--- a/yepcette/assets/styles/sass/_header.scss
+++ b/yepcette/assets/styles/sass/_header.scss
@@ -12,9 +12,8 @@ body > header{
         justify-self: center;
         grid-column: 2 / 3;
         font-size: 4rem;
-        color: #8B0000;
+        color: mistyrose;
         font-weight: 700;
-        font-family: 'Corinthia', cursive;
 
     }
     > nav{
@@ -27,7 +26,6 @@ body > header{
             justify-content: space-between;
             align-items: center;
             > li{
-                font-family: 'Work Sans', sans-serif;
                 padding: 5px 0;
                 > a{
                     font-size: 1.4rem;
