--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -12,14 +12,18 @@
                 grid-column: 2 / 3;
                 font-size: 5rem;
                 font-weight: bold;
-                color: $white;
+                color: mistyrose;
+                
             }
             > p{
                 grid-column: 2 / 3;
-                font-size: 3rem;
+                font-size: 2.6rem;
                 font-weight: bold;
                 color: $white;
                 width: 60vh;
+                > span{
+                    color: mistyrose;
+                }
             }
         }
     }
