--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -13,6 +13,12 @@
 .hidden{
     display: none;
 }
-.hidden{
-    display: none;
+h2, h4, h4, li{
+    font-family: 'Work Sans', sans-serif;
+}
+p{
+    font-family: 'Open Sans', sans-serif;
+}
+h1{
+    font-family: 'Corinthia', cursive;
 }
