html fiche recette

--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -13,16 +13,13 @@
 .hidden{
     display: none;
 }
-<<<<<<< HEAD
-
-=======
-h2, h4, h4, li{
+h2, h3, h4{
     font-family: 'Work Sans', sans-serif;
 }
-p{
+p, li{
     font-family: 'Open Sans', sans-serif;
 }
 h1{
     font-family: 'Corinthia', cursive;
 }
->>>>>>> 20f7610c02734d1b6f6405327d9326755c5e5038
+
