Sauvegarde de Vincent 17h05

--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -409,11 +409,11 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   display: none;
 }
 
-h2, h4, h4, li {
+h2, h3, h4 {
   font-family: "Work Sans", sans-serif;
 }
 
-p {
+p, li {
   font-family: "Open Sans", sans-serif;
 }
 
