--- a/yepcette/assets/styles/sass/style.scss
+++ b/yepcette/assets/styles/sass/style.scss
@@ -13,10 +13,10 @@
 .hidden{
     display: none;
 }
-h2, h4, h4, li{
+h2, h3, h4{
     font-family: 'Work Sans', sans-serif;
 }
-p{
+p, li{
     font-family: 'Open Sans', sans-serif;
 }
 h1{
