--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -57,8 +57,8 @@
                         > figure{
                             width: 100%;
                             > img{
-                                width: 300px;
-                                border-radius: 100%;
+                                height: 300px;
+                                border-radius: 50px;
                             }
                         }
                     }
