--- a/yepcette/assets/styles/sass/_header.scss
+++ b/yepcette/assets/styles/sass/_header.scss
@@ -12,7 +12,7 @@ body > header{
         justify-self: center;
         grid-column: 2 / 3;
         font-size: 4rem;
-        color: mistyrose;
+        color: $titreClaire;
         font-weight: 700;
 
     }
