--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -70,7 +70,7 @@ body > header > h1 {
   justify-self: center;
   grid-column: 2/3;
   font-size: 4rem;
-  color: mistyrose;
+  color: thistle;
   font-weight: 700;
 }
 body > header > nav {
@@ -149,42 +149,44 @@ body > header > ul > li:hover > a {
   justify-content: center;
   align-items: center;
 }
-#home > section:nth-of-type(1) > section > h1 {
+#home > section:nth-of-type(1) > section {
   grid-column: 2/3;
+}
+#home > section:nth-of-type(1) > section > h1 {
   font-size: 5rem;
   font-weight: bold;
-  color: mistyrose;
+  color: thistle;
 }
 #home > section:nth-of-type(1) > section > p {
-  grid-column: 2/3;
   font-size: 2.6rem;
   font-weight: bold;
   color: #ffffff;
   width: 60vh;
 }
 #home > section:nth-of-type(1) > section > p > span {
-  color: mistyrose;
+  color: thistle;
 }
 #home > section:nth-of-type(2) {
   display: grid;
   grid-template-rows: 0.1fr 1fr;
+  background-color: thistle;
 }
 #home > section:nth-of-type(2) > h2 {
   font-size: 3rem;
   font-weight: bold;
-  color: #242523;
+  color: darkslategray;
   margin: 50px;
   text-align: center;
 }
 #home > section:nth-of-type(2) > ul {
-  background-color: gainsboro;
+  background-color: snow;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 80%;
   margin: 50px auto;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  border-radius: 5px;
   padding: 40px;
 }
 #home > section:nth-of-type(2) > ul > li > article {
@@ -197,8 +199,8 @@ body > header > ul > li:hover > a {
   width: 100%;
 }
 #home > section:nth-of-type(2) > ul > li > article > header > figure > img {
-  height: 300px;
-  border-radius: 50px;
+  width: 200px;
+  border-radius: 100%;
 }
 #home > section:nth-of-type(2) > ul > li > article > section {
   display: flex;
@@ -219,14 +221,14 @@ body > header > ul > li:hover > a {
   justify-content: center;
 }
 #home > section:nth-of-type(3) {
-  background-color: gainsboro;
+  background-color: snow;
   display: grid;
   grid-template-rows: 0.1fr 1fr;
 }
 #home > section:nth-of-type(3) > h2 {
   font-size: 3rem;
   font-weight: bold;
-  color: #242523;
+  color: darkslategray;
   margin: 50px;
   text-align: center;
 }
@@ -237,10 +239,36 @@ body > header > ul > li:hover > a {
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 20px;
 }
+#home > section:nth-of-type(4) {
+  display: grid;
+  grid-template-rows: 0.1fr 1fr;
+  background-color: thistle;
+}
+#home > section:nth-of-type(4) > h2 {
+  font-size: 3rem;
+  font-weight: bold;
+  color: darkslategray;
+  margin: 50px;
+  text-align: center;
+}
+#home > section:nth-of-type(4) > ul {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+#home > section:nth-of-type(4) > ul > li {
+  padding: 10px;
+}
+#home > section:nth-of-type(4) > ul > li > figure > img {
+  height: 300px;
+  border-radius: 5px;
+}
 
 .article {
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-  border-radius: 20px;
+  border-radius: 5px;
   padding: 10px;
   margin: 50px;
 }
@@ -249,6 +277,7 @@ body > header > ul > li:hover > a {
 }
 .article > header > figure > img {
   width: 100%;
+  height: 200px;
 }
 .article > section > h3 {
   font-size: 2rem;
