--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -8,21 +8,19 @@
         justify-content: center;
         align-items: center;
         > section{
+            grid-column: 2 / 3;
             > h1{
-                grid-column: 2 / 3;
                 font-size: 5rem;
                 font-weight: bold;
-                color: mistyrose;
-                
+                color: $titreClaire;
             }
             > p{
-                grid-column: 2 / 3;
                 font-size: 2.6rem;
                 font-weight: bold;
                 color: $white;
                 width: 60vh;
                 > span{
-                    color: mistyrose;
+                    color: $titreClaire;
                 }
             }
         }
@@ -30,22 +28,23 @@
     > section:nth-of-type(2){
         display: grid;
         grid-template-rows: 0.1fr 1fr;
+        background-color: $bgdFonce;
         > h2{
             font-size: 3rem;
             font-weight: bold;
-            color: $black;
+            color: $titreFonce;
             margin: 50px;
             text-align: center;
         }
         > ul{
-            background-color: gainsboro;
+            background-color: $bgdClair;
             display: flex;
             justify-content: space-around;
             align-items: center;
             width: 80%;
             margin: 50px auto;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-            border-radius: 20px;
+            border-radius: 5px;
             padding: 40px;
             > li{
                 > article{
@@ -57,8 +56,8 @@
                         > figure{
                             width: 100%;
                             > img{
-                                height: 300px;
-                                border-radius: 50px;
+                                width: 200px;
+                                border-radius: 100%;
                             }
                         }
                     }
@@ -84,15 +83,14 @@
             }
         }
     }
-        
     > section:nth-of-type(3){
-        background-color: gainsboro;
+        background-color: $bgdClair;
         display: grid;
         grid-template-rows: 0.1fr 1fr;
         > h2{
             font-size: 3rem;
             font-weight: bold;
-            color: $black;
+            color: $titreFonce;
             margin: 50px;
             text-align: center;
         }
@@ -105,15 +103,43 @@
 
         }
     }
-}
 
+    > section:nth-of-type(4){
+        display: grid;
+        grid-template-rows: 0.1fr 1fr;
+        background-color: $bgdFonce;
+        > h2{
+            font-size: 3rem;
+            font-weight: bold;
+            color: $titreFonce;
+            margin: 50px;
+            text-align: center;
+        }
+        > ul{
+            width: 80%;
+            margin: auto;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            > li{
+                padding: 10px;
+                > figure{
+                    > img{
+                        height: 300px;
+                        border-radius: 5px;
+                    }
+                }
+            }
+        }
+    }
+}
 
 .article{
     // width: 20vw;
     // display: grid;
     // grid-template-rows: 1fr 1fr 0.4fr;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 20px;
+    border-radius: 5px;
     padding: 10px;
     margin: 50px;
     > header{
@@ -121,6 +147,7 @@
             width: 100%;
             > img{
                 width: 100%;
+                height: 200px;
             }
         }
     }
