--- a/yepcette/assets/styles/sass/_vars.scss
+++ b/yepcette/assets/styles/sass/_vars.scss
@@ -17,3 +17,11 @@ $darkThemeOrange : #fd790f;
 // Gradient
 $gradient-top-left: linear-gradient(225deg, #7400b8, #6930c3, #5e60ce, #5390d9, #4ea8de, #48bfe3, #56cfe1);
 
+
+// Background
+$bgdClair: snow;
+$bgdFonce: thistle;
+
+// Titres
+$titreClaire: thistle;
+$titreFonce: darkslategray;
