--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -73,6 +73,7 @@
                         }
                         > p{
                             font-size: 1.2rem;
+                            margin-bottom: 20px;
                         }
                     }
                     > footer{
@@ -94,14 +95,6 @@
             margin: 50px;
             text-align: center;
         }
-        > ul{
-            width: 80%;
-            margin: auto;
-            display: grid;
-            grid-template-columns: 1fr 1fr 1fr;
-            grid-gap: 20px;
-
-        }
     }
 
     > section:nth-of-type(4){
@@ -120,6 +113,7 @@
             margin: auto;
             display: flex;
             flex-direction: row;
+            justify-content: center;
             flex-wrap: wrap;
             > li{
                 padding: 10px;
@@ -147,7 +141,6 @@
             width: 100%;
             > img{
                 width: 100%;
-                height: 200px;
             }
         }
     }
@@ -189,5 +182,68 @@
     &:hover{
         transform: translateY(-2px);
         box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+}
+
+
+@media (min-width: 1200px){
+    #home > section:nth-of-type(3){
+            > ul{
+                width: 80%;
+                margin: auto;
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr;
+                grid-gap: 20px;
+            }
+    }
+    #home{
+        > section:nth-of-type(2){
+            > ul{
+                > li{
+                    width: 30%;
+                }
+            }
+        }
+    }
+    
+}
+
+@media (max-width: 1200px){
+    #home > section:nth-of-type(3){
+            > ul{
+                width: 90%;
+                margin: auto;
+                display: grid;
+                grid-template-columns: 1fr;
+                grid-gap: 10px;
+            }
+    }
+        #home{
+        > section:nth-of-type(2){
+            > ul{
+                > li{
+                    width: 30%;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 800px){
+    #home{
+        > section:nth-of-type(2){
+            > ul{
+                flex-direction: column;
+            }
+        }
+    }
+    #home{
+        > section:nth-of-type(2){
+            > ul{
+                > li{
+                    width: 90%;
+                }
+            }
+        }
     }
 }
