--- a/yepcette/assets/styles/sass/_recette.scss
+++ b/yepcette/assets/styles/sass/_recette.scss
@@ -1,15 +1,19 @@
 #recette 
 {
 
-
+.recette{
+    z-index:999;
+}
  .mainrecette 
-{
-        
+{   
+        background-color:#fdfbe3;
         display:grid;
         grid-template-columns: 1fr 4fr 0.5fr 2fr 1fr;
+        grid-template-rows: 0.3fr 0.15fr 0.3fr 1fr;
          
         section:nth-of-type(1)
     {
+            grid-row: 1 / 2 ;
             grid-column: 1 / 6 ;
             background:url("https://wallpapersmug.com/download/1920x1080/930962/vegetables-fresh.jpg");
             background-size: cover;
@@ -18,22 +22,139 @@
             height: 70vh;  
     }
        section:nth-of-type(2)
-    {
+    {        grid-row: 3 / 4 ;
              grid-column: 2 / 3 ;
+             box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+                     border-radius: 10px;
+                     background-color:#ffffff;
+        h2 {
+                font-size: 3rem;
+                font-weight: bold;
+                color: darkslategray;
+                margin: 3rem;
+                text-align: center;
+             }
+        ul {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            li:(even) {
+                padding:1rem;
+            }
+        }
+        figure 
+        {
+            img 
+            {
+                width:50rem;
+            }
+        }
     }
        section:nth-of-type(3)
-    {
+    {        grid-row: 4 / 5 ;
              grid-column: 2 / 3 ;
+            
+             
+             h2 {
+                font-size: 3rem;
+                font-weight: bold;
+                color: darkslategray;
+                margin: 50px;
+                text-align: center;
+             }
+             ol {
+                 
+                 li {
+                     display:grid;
+                     grid-template-rows: 1fr 4fr;
+                     grid-template-columns: 1fr 3fr;
+                     margin-top:2rem;
+                     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+                     border-radius: 10px;
+                     padding:1rem;
+                     background-color:#ffffff;
+                     
+                     span {
+                     grid-column: 1 / 3 ;
+                     grid-row: 1 / 2 ;
+                     position: relative;
+                     color: #ffffff;
+                     width: 2.2rem;
+                     height: 2.2rem;
+                     text-align: center;
+                     line-height: 2.2rem;
+                     font-weight: 500;
+                     margin-bottom: 1rem;
+                     border-radius: 50px;
+                     display: inline-block;
+                     background-color: #ff7d5f;
+                         
+                     }
+                     figure {
+                         grid-column: 1 / 2 ;
+                         grid-row: 2 / 3 ;
+                         display:flex;
+                         justify-content:center;  
+                         align-items:center;
+                         img {
+                              border-radius: 10px;
+                         }
+                     }
+                     p {
+                         grid-column: 2 / 3 ;
+                         grid-row: 2 / 3 ;
+                         font-size: 1.2rem;
+                         line-height:2rem;
+                         padding-left:2rem;
+                         padding-right:2rem;
+                         display:flex;
+                         justify-content:center;  
+                         align-items:center;
+                         
+                     }
+                 }
+             }
     }
     
+    .aside
+    {   grid-row: 3 / 5 ; 
+        grid-column: 4 / 5 ;
+        display:grid;
+        grid-template-rows: 1fr 3fr;
     
-       aside::nth-of-type(1) 
-    {
-             grid-column: 4 / 5 ;
+           aside:nth-of-type(1) 
+        {
+                 grid-row: 1 / 2 ;
+        }
+           aside:nth-of-type(2) 
+        {
+                 grid-row: 2 / 3 ;
+                 margin-top:5rem;
+                 box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+                 border-radius: 10px;
+                 padding:1rem;
+                 background-color:#ffffff;
+                 height:25rem;
+                 font-size:1.2rem;
+                 position: sticky;
+                 top: 7rem;
+                 
+            h2 {
+                font-size: 2rem;
+                font-weight: bold;
+                color: #000;
+                padding-bottom:2.3rem;
+            }     
+            ol {
+                list-style: inside;
+                li {
+                    line-height:2rem;
+                }
+            }
+        }
     }
-       aside::nth-of-type(2) 
-    {
-             grid-column: 4 / 5 ;
+    .demo {
+        width:17rem;
     }
 }
 
@@ -42,11 +163,8 @@
 
 
 .btn-blue{
-    display: inline-block;
-    cursor: pointer;
+    
     border-radius: 20px;
-    border: none;
-    text-decoration: none;
     color: white;
     text-align: center;
     font-size: 1.2rem;
