--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -68,7 +68,7 @@ body > header > h1 {
   justify-self: center;
   grid-column: 2/3;
   font-size: 4rem;
-  color: thistle;
+  color: #fdfbe3;
   font-weight: 700;
 }
 body > header > nav {
@@ -145,6 +145,9 @@ body > header > ul > li:hover > a {
   body > header > ul {
     grid-column: 6/7;
   }
+  #nav_mobil {
+    display: none;
+  }
 }
 @media (max-width: 1200px) {
   body > header {
@@ -153,6 +156,31 @@ body > header > ul > li:hover > a {
   }
   body > header > ul {
     display: none;
+  }
+  #nav_mobil {
+    display: none;
+  }
+}
+@media (max-width: 800px) {
+  body > header {
+    grid-template-columns: 0.05fr 0.1fr 0.05fr 0.8fr 0.05fr;
+    grid-template-rows: 10vh;
+  }
+  body > header > ul {
+    display: none;
+  }
+  #nav_pc {
+    display: none;
+  }
+  #nav_mobil {
+    grid-column: 5/6;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  #nav_mobil > span {
+    color: white;
+    font-size: 3rem;
   }
 }
 #home > section:nth-of-type(1) {
@@ -170,7 +198,7 @@ body > header > ul > li:hover > a {
 #home > section:nth-of-type(1) > section > h1 {
   font-size: 5rem;
   font-weight: bold;
-  color: thistle;
+  color: #fdfbe3;
 }
 #home > section:nth-of-type(1) > section > p {
   font-size: 2.6rem;
@@ -179,12 +207,12 @@ body > header > ul > li:hover > a {
   width: 60vh;
 }
 #home > section:nth-of-type(1) > section > p > span {
-  color: thistle;
+  color: #fdfbe3;
 }
 #home > section:nth-of-type(2) {
   display: grid;
   grid-template-rows: 0.1fr 1fr;
-  background-color: thistle;
+  background-color: #fdfbe3;
 }
 #home > section:nth-of-type(2) > h2 {
   font-size: 3rem;
@@ -251,7 +279,7 @@ body > header > ul > li:hover > a {
 #home > section:nth-of-type(4) {
   display: grid;
   grid-template-rows: 0.1fr 1fr;
-  background-color: thistle;
+  background-color: #fdfbe3;
 }
 #home > section:nth-of-type(4) > h2 {
   font-size: 3rem;
@@ -272,7 +300,7 @@ body > header > ul > li:hover > a {
   padding: 10px;
 }
 #home > section:nth-of-type(4) > ul > li > figure > img {
-  height: 300px;
+  max-height: 300px;
   border-radius: 5px;
 }
 
