--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -118,7 +118,7 @@
                 padding: 10px;
                 > figure{
                     > img{
-                        height: 300px;
+                        max-height: 300px;
                         border-radius: 5px;
                     }
                 }
