--- a/yepcette/assets/styles/sass/_vars.scss
+++ b/yepcette/assets/styles/sass/_vars.scss
@@ -20,8 +20,8 @@ $gradient-top-left: linear-gradient(225deg, #7400b8, #6930c3, #5e60ce, #5390d9, 
 
 // Background
 $bgdClair: snow;
-$bgdFonce: thistle;
+$bgdFonce: #fdfbe3;
 
 // Titres
-$titreClaire: thistle;
+$titreClaire: #fdfbe3;
 $titreFonce: darkslategray;
