--- a/yepcette/assets/styles/sass/_home.scss
+++ b/yepcette/assets/styles/sass/_home.scss
@@ -151,11 +151,13 @@
         }
         > p{
             font-size: 1.2rem;
+            line-height: 1.5rem;
         }
     }
     > footer{
         display: flex;
         justify-content: center;
+        align-items: flex-end;
     }
 }
 
