--- a/yepcette/assets/styles/sass/_recette.scss
+++ b/yepcette/assets/styles/sass/_recette.scss
@@ -12,7 +12,7 @@
         grid-template-columns: 1fr 4fr 0.5fr 2fr 1fr;
         grid-template-rows: 0.01fr 0.2fr 0.3fr 1.4fr;
         width:100%; 
-        height:100%;
+       
         section:nth-of-type(1)
     {
             grid-row: 1 / 2 ;
@@ -229,8 +229,59 @@
         }
     }
     .demo {
-        width:17rem;
+        width:15rem;
     }
 }
 
+}
+
+
+
+
+@media (max-width: 1200px) {
+    #recette {
+    .mainrecette {
+        height:100vh;
+    section:nth-of-type(3){
+      ol {
+          li {
+              
+              figure {
+                     grid-column: 2 / 3 ;
+                     grid-row: 1 / 2 ;
+                  .demo {
+                        width:10rem;
+                    }
+              }
+              p {
+                    grid-column: 1 / 3 ;
+                    grid-row: 2 / 3 ;
+              }
+          }
+      }
+            
+    }
+    
+  } 
+  
+}
+}
+
+@media (max-width: 800px){
+    #recette{
+        > section:nth-of-type(2){
+            > ul{
+                flex-direction: column;
+            }
+        }
+    }
+    #recette{
+        > section:nth-of-type(2){
+            > ul{
+                > li{
+                    width: 90%;
+                }
+            }
+        }
+    }
 }
