--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -486,6 +486,20 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-image: url(https://1964035949.rsc.cdn77.org/uploads/media/5956128d0a17e.png);
   background-size: cover;
   box-shadow: 1px;
+  display: flex;
+}
+
+.m-titre1 {
+  color: white;
+  font-weight: 700;
+  font-size: 4.5rem;
+  align-items: center;
+  display: flex;
+  padding-left: 55vw;
+}
+.span1 {
+  color: gold;
+  text-decoration: underline 8px solid gold;
 }
 
 .m-section2 {
@@ -552,6 +566,12 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   display: flex;
   justify-content: center;
   margin-top: 2vh;
+}
+.m-card footer a {
+  color: darkslategray;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-decoration: underline solid 3px #e49c86;
 }
 
 .m-section4 {
@@ -655,6 +675,7 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 
 #liste-recettes .m-recette-du-jour figure .plat {
   width: 100%;
+  border-radius: 50%;
 }
 
 #liste-recettes .m-recette-du-jour h3 {
@@ -739,7 +760,6 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   grid-template-columns: 1fr 4fr 0.5fr 2fr 1fr;
   grid-template-rows: 0.01fr 0.2fr 0.3fr 1.4fr;
   width: 100%;
-  height: 100%;
 }
 #recette .mainrecette section:nth-of-type(1) {
   grid-row: 1/2;
@@ -933,6 +953,9 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
 }
 
 @media (max-width: 1200px) {
+  #recette .mainrecette {
+    height: 100vh;
+  }
   #recette .mainrecette section:nth-of-type(3) ol li figure {
     grid-column: 2/3;
     grid-row: 1/2;
@@ -945,7 +968,6 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
     grid-row: 2/3;
   }
 }
-
 @media (max-width: 800px) {
   #recette > section:nth-of-type(2) > ul {
     flex-direction: column;
