--- a/yepcette/assets/styles/css/style.css
+++ b/yepcette/assets/styles/css/style.css
@@ -537,14 +537,26 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
 }
 
+.car-1:hover {
+  transform: scale(1.1);
+}
+
 .car-2 {
   background-image: url(https://www.cuisineactuelle.fr/imgre/fit/http.3A.2F.2Fprd2-bone-image.2Es3-website-eu-west-1.2Eamazonaws.2Ecom.2Fcac.2F2018.2F09.2F25.2F03ab5e89-bad7-4a44-b952-b30c68934215.2Ejpeg/555x276/quality/80/crop-from/center/burger-maison.jpeg);
   background-size: cover;
 }
 
+.car-2:hover {
+  transform: scale(1.1);
+}
+
 .car-3 {
   background-image: url(https://img.cuisineaz.com/660x660/2016/08/31/i93404-gratin-de-lasagnes-a-la-bolognaise.jpg);
   background-size: cover;
+}
+
+.car-3:hover {
+  transform: scale(1.1);
 }
 
 .m-card h3 {
@@ -572,6 +584,11 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   text-decoration: underline solid 3px #e49c86;
 }
 
+.m-card footer a:hover {
+  color: #FFC300;
+  text-decoration: underline solid 3px #FF5733;
+}
+
 .m-section4 {
   display: flex;
   justify-content: center;
@@ -583,9 +600,17 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
 }
 
+.car-4:hover {
+  transform: scale(1.1);
+}
+
 .car-5 {
   background-image: url(https://static.750g.com/images/1200-630/eac4a2099f6297ae9e20ccf7fd92d19e/pate-a-pizza-fine.png);
   background-size: cover;
+}
+
+.car-5:hover {
+  transform: scale(1.1);
 }
 
 .car-6 {
@@ -593,9 +618,17 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
 }
 
+.car-6:hover {
+  transform: scale(1.1);
+}
+
 .car-7 {
   background-image: url(https://www.grazia.fr/wp-content/uploads/grazia/2013/10/Joue-de-baeuf-confite-et-potimarron-braise.jpg);
   background-size: cover;
+}
+
+.car-7:hover {
+  transform: scale(1.1);
 }
 
 .car-8 {
@@ -603,9 +636,17 @@ body .footer1 .f-article2 .f-list2 .f-li2 a span {
   background-size: cover;
 }
 
+.car-8:hover {
+  transform: scale(1.1);
+}
+
 .car-9 {
   background-image: url(https://marcwiner.com/wp-content/uploads/2022/03/porc-caramel-tiktok-scaled.jpg);
   background-size: cover;
+}
+
+.car-9:hover {
+  transform: scale(1.1);
 }
 
 .m-section5 {
